--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	<body>
 		<div id="font-loader">test</div>
 		<canvas id="canvas"></canvas>
-		<script src="script.js"></script>
+		<!-- dependencies -->
+		<script src="js/character.js"></script>
+		<script src="js/scheme.js"></script>
+		<script src="js/song.js"></script>
+		<script src="js/status.js"></script>
+		<!-- core script -->
+		<script src="js/script.js"></script>
 	</body>
 </html>
